# bulto-graphql-api

./: Cargo.toml  README.md  build.rs  pitch.md
protocol/: api_gateway.proto
src/: lib.rs  main.rs  stubs.rs
src/gateway/: error.rs  mod.rs  stubs.rs
src/gateway/models/: ai_assistant.rs  ai_features.rs  auth.rs  card_integration.rs  common.rs  common_features.rs  credit_scoring.rs  crm_system.rs  financial_transactions.rs  lending.rs  mobile_money.rs  mod.rs  notifications.rs  point_of_sale.rs  user_management.rs
src/remote/: mod.rs  services.rs
