[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
chrono = "0.4.31"
serde_json = "1.0.111"
actix-web = "4.4.0"
async-graphql = "7.0"
async-graphql-actix-web = "7.0.0"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.10"
